Adding color vars

--- a/frontend/src/assets/css/vars.css
+++ b/frontend/src/assets/css/vars.css
@@ -8,4 +8,6 @@
 	--white-hover: #e6e6e6;
 	--font-size: 10px;
 	--font-family: 'Roboto', sans-serif;
+	--color-success: #2dc97e;
+	--color-error: #e64141;
 }
