--- a/frontend/src/assets/css/vars.css
+++ b/frontend/src/assets/css/vars.css
@@ -10,4 +10,6 @@
 	--font-family: 'Roboto', sans-serif;
 	--color-success: #2dc97e;
 	--color-error: #e64141;
+	--snowflake-chart-color-green: #6bc51a;
+    --snowflake-chart-border-color-green: #79ee04;
 }
