update style settings, tools, utilities declarations

--- a/frontend/src/apps/visagiste/styles/tools/_index.scss
+++ b/frontend/src/apps/visagiste/styles/tools/_index.scss
@@ -1,8 +1,10 @@
 @forward "_absolute";
 @forward "_border";
+@forward "_display";
 @forward "_elevation";
 @forward "_functions";
 @forward "_layer";
 @forward "_rounded";
 @forward "_theme";
 @forward "_typography";
+@forward "_utilities";
