change $layers variable to true by default

--- a/frontend/src/apps/visagiste/styles/settings/_variables.scss
+++ b/frontend/src/apps/visagiste/styles/settings/_variables.scss
@@ -4,6 +4,7 @@
 @use "../tools/functions" as  *;
 
 $reset: true !default;
+$layers: true !default;
 
 $body-font-family: 'Roboto', sans-serif !default;
 $font-size-root: 10px !default;
