--- a/frontend/src/apps/visagiste/styles/tools/_layer.scss
+++ b/frontend/src/apps/visagiste/styles/tools/_layer.scss
@@ -1,7 +1,11 @@
 @use '../settings';
 
 @mixin layer ($name) {
-  @layer visagiste.#{$name} {
-    @content
+  @if (settings.$layers) {
+    @layer visagiste.#{$name} {
+      @content;
+    }
+  } @else {
+    @content;
   }
 }
