Create density styles and composable useDensity wih densityProps

--- a/frontend/src/apps/visagiste/styles/tools/_index.scss
+++ b/frontend/src/apps/visagiste/styles/tools/_index.scss
@@ -1,5 +1,6 @@
 @forward "_absolute";
 @forward "_border";
+@forward "_density";
 @forward "_display";
 @forward "_elevation";
 @forward "_functions";
