add color-pick setting

--- a/frontend/src/apps/visagiste/styles/settings/_variables.scss
+++ b/frontend/src/apps/visagiste/styles/settings/_variables.scss
@@ -3,6 +3,7 @@
 @use "sass:meta";
 @use "../tools/functions" as  *;
 
+$color-pack: true !default;
 $reset: true !default;
 $layers: true !default;
 
