--- a/frontend/src/apps/visagiste/styles/settings/_variables.scss
+++ b/frontend/src/apps/visagiste/styles/settings/_variables.scss
@@ -8,7 +8,7 @@ $reset: true !default;
 $layers: true !default;
 
 $body-font-family: 'Roboto', sans-serif !default;
-$font-size-root: 10px !default;
+$font-size-root: 1rem !default;
 $line-height-root: 1.5 !default;
 $border-color-root: rgba(var(--base-border-color), var(--base-border-opacity)) !default;
 $border-radius-root: 4px !default;
