--- a/frontend/src/apps/visagiste/styles/settings/_variables.scss
+++ b/frontend/src/apps/visagiste/styles/settings/_variables.scss
@@ -138,8 +138,8 @@ $form-grid-gutter: $spacer * 2 !default;
 $grid-columns: 12 !default;
 $container-padding-x: $spacer * 4 !default;
 
-$grid-gutter: () !default;
-$grid-gutter: map-deep-merge(
+$grid-gutters: () !default;
+$grid-gutters: map-deep-merge(
   (
     'xs': math.div($grid-gutter, 12),
     'sm': math.div($grid-gutter, 6),
@@ -147,7 +147,7 @@ $grid-gutter: map-deep-merge(
     'lg': math.div($grid-gutter * 2, 3),
     'xl': $grid-gutter,
   ),
-  $grid-gutter
+  $grid-gutters
 );
 
 $container-max-widths: () !default;
