--- a/frontend/src/apps/visagiste/styles/settings/_variables.scss
+++ b/frontend/src/apps/visagiste/styles/settings/_variables.scss
@@ -354,7 +354,7 @@ $sizes: (
 ) !default;
 
 $size-scale: $spacer * 2 !default;
-$size-scale: (
+$size-scales: (
   'x-small': -2,
   'small': -1,
   'default': 0,
