create variant tool

--- a/frontend/src/apps/visagiste/styles/tools/_index.scss
+++ b/frontend/src/apps/visagiste/styles/tools/_index.scss
@@ -1,7 +1,6 @@
 @forward "_absolute";
 @forward "_border";
 @forward "_density";
-@forward "_display";
 @forward "_elevation";
 @forward "_functions";
 @forward "_layer";
@@ -9,3 +8,5 @@
 @forward "_theme";
 @forward "_typography";
 @forward "_utilities";
+@forward "_variant";
+@forward "_display";
