create states style tool

--- a/frontend/src/apps/visagiste/styles/tools/_index.scss
+++ b/frontend/src/apps/visagiste/styles/tools/_index.scss
@@ -1,10 +1,11 @@
 @forward "_absolute";
+@forward "_functions";
 @forward "_border";
 @forward "_density";
 @forward "_elevation";
-@forward "_functions";
 @forward "_layer";
 @forward "_rounded";
+@forward "_states";
 @forward "_theme";
 @forward "_typography";
 @forward "_utilities";
