--- a/frontend/src/apps/visagiste/styles/tools/_states.scss
+++ b/frontend/src/apps/visagiste/styles/tools/_states.scss
@@ -7,7 +7,7 @@
     $selector: #{'>'} #{$selector}
   }
   &:hover {
-    #{selector} {
+    #{$selector} {
       opacity: calc(#{map.get(settings.$states, 'hover')} * var(--base-theme-overlay-multiplier));
     }
   }
@@ -37,12 +37,12 @@
   }
   &:hover {
     #{$selector} {
-      opacity: calc(#{base} + #{map.get(settings.$states, 'hover')} * var(--base-theme-overlay-multiplier));
+      opacity: calc(#{$base} + #{map.get(settings.$states, 'hover')} * var(--base-theme-overlay-multiplier));
     }
   }
   &:focus-visible {
     #{$selector} {
-      opacity: calc(#{base} + #{map.get(settings.$states, 'focus')} * var(--base-theme-overlay-multiplier));
+      opacity: calc(#{$base} + #{map.get(settings.$states, 'focus')} * var(--base-theme-overlay-multiplier));
     }
   }
   @supports not selector(:focus-visible) {
