--- a/frontend/src/apps/visagiste/styles/tools/_index.scss
+++ b/frontend/src/apps/visagiste/styles/tools/_index.scss
@@ -4,6 +4,7 @@
 @forward "_density";
 @forward "_elevation";
 @forward "_layer";
+@forward "_position";
 @forward "_rounded";
 @forward "_states";
 @forward "_theme";
