--- a/frontend/src/apps/visagiste/components/BaseApp/BaseApp.scss
+++ b/frontend/src/apps/visagiste/components/BaseApp/BaseApp.scss
@@ -1,5 +1,5 @@
 @use "../../styles/tools";
-@use "./variables" as *;
+@use "variables" as *;
 
 @include tools.layer('components') {
   .base-application {
