--- a/frontend/src/apps/visagiste/components/BaseIcon/BaseIcon.scss
+++ b/frontend/src/apps/visagiste/components/BaseIcon/BaseIcon.scss
@@ -45,6 +45,6 @@
     margin-inline-end: $icon-margin-start;
   }
   .base-icon__end {
-    margin-inline-end: $icon-margin-end;
+    margin-inline-start: $icon-margin-end;
   }
 }
