--- a/frontend/src/apps/visagiste/components/BaseIcon/_variables.scss
+++ b/frontend/src/apps/visagiste/components/BaseIcon/_variables.scss
@@ -2,7 +2,7 @@
 @use '../../styles/settings';
 @use '../../styles/tools';
 
-// VIcon
+// BaseIcon
 $icon-disabled-opacity: 0.38 !default;
 $icon-left-margin-left: map.get(settings.$grid-gutters, 'md') !default;
 $icon-letter-spacing: normal !default;
