refactor BaseProgressLinear component

--- a/frontend/src/apps/visagiste/components/BaseProgressLinear/_variables.scss
+++ b/frontend/src/apps/visagiste/components/BaseProgressLinear/_variables.scss
@@ -1,5 +1,5 @@
 @use 'sass:map';
-@use '../../styles/settings';
+@use '@/apps/visagiste/styles/settings';
 
 // BaseProgressLinear
 $progress-linear-background: currentColor !default;
