--- a/frontend/src/apps/visagiste/components/BaseInput/BaseInput.scss
+++ b/frontend/src/apps/visagiste/components/BaseInput/BaseInput.scss
@@ -9,7 +9,7 @@
     flex: $input-flex;
     font-size: $input-font-size;
     font-weight: $input-font-weight;
-    line-height: $icon-line-height;
+    line-height: $input-line-height;
 
     &--disabled {
       pointer-events: none;
@@ -17,8 +17,8 @@
 
     @at-root {
       @include tools.density('base-input', $input-density) using ($modifier) {
-        --base-input-control-height: #{$icon-line-height + $modifier};
-        --base-field-input-padding-top: #{16px + $modifier * .5};
+        --base-input-control-height: #{$input-control-height + $modifier};
+        --base-input-padding-top: #{16px + $modifier * .5};
       }
     }
   }
