--- a/frontend/src/apps/visagiste/components/BaseField/BaseField.scss
+++ b/frontend/src/apps/visagiste/components/BaseField/BaseField.scss
@@ -84,7 +84,7 @@
     &--variant-outlined,
     &--single-line,
     &--no-label {
-      --base-field-padding-top: 0;
+      --base-field-padding-top: 0px;
       $root: &;
 
       @at-root {
@@ -251,7 +251,7 @@
     cursor: pointer;
     opacity: 0;
     overflow: hidden;
-    margin-inside: $field-clearable-margin;
+    margin-inline: $field-clearable-margin;
     transition: $field-transition-timing;
     transition-property: opacity, transform, width;
 
@@ -285,7 +285,7 @@
 
     .base-field--variant-underlined &,
     .base-field--variant-plain & {
-      top: calc(var(--base-field-input-padding-top) + var(--base-field-padding-top));
+      top: calc(var(--base-input-padding-top) + var(--base-field-padding-top));
     }
     .base-field--center-affix & {
       top: 50%;
@@ -299,7 +299,7 @@
       opacity: 1;
     }
     .base-field--error:not(.base-field--disabled) & {
-      color: rgb(var(--base-field-label-scale));
+      color: rgb(var(--base-theme-error));
     }
     &--floating {
       --base-field-label-scale: #{$field-label-floating-scale}em;
@@ -379,7 +379,7 @@
       &::before {
         border-color: currentColor;
         border-style: solid;
-        border-width: 0 0 $field-focused-border-width;
+        border-width: 0 0 var(--base-field-border-width);
         opacity: var(--base-field-border-opacity);
         transition: opacity $field-subtle-transition-timing;
         @include tools.absolute(true);
@@ -458,7 +458,7 @@
           @include tools.absolute(true);
         }
         &::before {
-          border-width: var(--basev-field-border-width) 0 0;
+          border-width: var(--base-field-border-width) 0 0;
         }
         &::after {
           bottom: 0;
@@ -575,7 +575,7 @@
     .base-field__field,
     .base-field__input,
     .base-field__outline {
-      flex-direction: row-reverse
+      flex-direction: row-reverse;
     }
     .base-field__input, input {
       text-align: end;
