--- a/frontend/src/apps/visagiste/styles/tools/_index.scss
+++ b/frontend/src/apps/visagiste/styles/tools/_index.scss
@@ -6,6 +6,7 @@
 @forward "_layer";
 @forward "_position";
 @forward "_rounded";
+@forward "_rtl";
 @forward "_states";
 @forward "_theme";
 @forward "_typography";
