--- a/frontend/src/apps/visagiste/components/BaseDivider/BaseDivider.scss
+++ b/frontend/src/apps/visagiste/components/BaseDivider/BaseDivider.scss
@@ -5,8 +5,8 @@
   .base-divider {
     display: block;
     flex: $divider-flex;
-    height: 0;
-    max-height: 0;
+    height: 0px;
+    max-height: 0px;
     opacity: $divider-opacity;
     transition: inherit;
 
@@ -19,41 +19,41 @@
       height: auto;
       margin-left: $divider-vertical-margin-left;
       max-height: 100%;
-      max-width: 0;
+      max-width: 0px;
       vertical-align: text-bottom;
-      width: 0;
+      width: 0px;
     }
     &--inset {
-      &:not(.base-divider-vertical) {
+      &:not(.base-divider--vertical) {
         max-width: $divider-inset-max-width;
         margin-inline-start: $divider-inset-margin;
       }
-      &.base-divider-vertical{
+      &.base-divider--vertical{
         margin-bottom: $divider-vertical-inset-margin-bottom;
         margin-top: $divider-vertical-inset-margin-top;
         max-height: $divider-vertical-inset-max-height;
       }
     }
-    .base-divider__content {
-      padding: $divider-content-padding;
-      text-wrap: nowrap;
+  }
+  .base-divider__content {
+    padding: $divider-content-padding;
+    text-wrap: nowrap;
 
-      .base-divider__wrapper & {
-        padding: $divider-content-vertical-padding;
-      }
+    .base-divider__wrapper--vertical & {
+      padding: $divider-content-vertical-padding;
     }
-    .base-divider__wrapper {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+  }
+  .base-divider__wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-      &--vertical {
-        flex-direction: column;
-        height: 100%;
+    &--vertical {
+      flex-direction: column;
+      height: 100%;
 
-        .base-divider {
-          margin: 0 auto;
-        }
+      .base-divider {
+        margin: 0 auto;
       }
     }
   }
